# vkatunchik

./: README.md
balancer/: CMakeLists.txt  consumer.cpp  consumer.hpp  data_types.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  producer_cl.cpp  producer_cl.hpp  storage_class.cpp  storage_class.hpp
operator/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
scoreboard/: CMakeLists.txt  data_types.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  socket_class.cpp  socket_class.hpp
terminal/: CMakeLists.txt  data_types.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  send_class.cpp  send_class.hpp
